--- a/Trolyao.ipynb
+++ b/Trolyao.ipynb
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def chang_wallpaper():\n",
+    "def change_wallpaper():\n",
     "    api_key = 'RF3LyUUIyogjCpQwlf-zjzCf1JdvRwb--SLV6iCzOxw'\n",
     "    url = 'https://api.unsplash.com/photos/random?client_id=' + api_key  # pic from unspalsh.com\n",
     "    f = urllib2.urlopen(url)\n",
